[package]
name = "greedy-nearest-neighbor-algorithm"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenv = "0.15.0"
